# auto-rich-argparse

./: .pre-commit-config.yaml  LICENSE  README.md  auto_rich_argparse.py  pyproject.toml
